# listmonk-mailersend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: default.yaml
src/: config.rs  main.rs
src/listmonk/: api.rs  mod.rs  rest.rs
src/mailersend/: api.rs  buffer.rs  job.rs  mod.rs  rest.rs  throttler.rs
test/: req.json  req2.json  req_bounce.json
