[package]
name = "listmonk-mailersend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
futures-executor = {version = "0.3", features = ["thread-pool"]}
chrono = "0.4.31"
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0"
simple_logger = "4.3"
regex = "1.10.2"
lazy_static = "1.4.0"
actix-rt = "2.9.0"
futures = "0.3.30"
thiserror = "1.0.56"
